--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -123,7 +123,7 @@ th {
 	background-color: yellow;
 }
 
-#extra {
+.extra {
 	display: flex;
     flex-direction: column;
     justify-content: space-between;
